design-principles-02/src/main/java/com/farhad/example/design_principles02/ocp/demo2/good/PaymentMethod.java
package com.farhad.example.design_principles02.ocp.demo2.good;

public interface PaymentMethod {

	void pay(Payment payment);
}
