design-principles-02/src/main/java/com/farhad/example/design_principles02/ocp/demo2/bad/PaymentMethod.java
package com.farhad.example.design_principles02.ocp.demo2.bad;

public enum PaymentMethod {
	Cash, CreditCard, DebitCard
}
